# service-base

./: .gitignore  CMakeLists.txt  ServiceBase.cpp  ServiceInstaller.cpp  ServiceInstaller.h  service-base.vcxproj
SampleServiceSetup/: setup.vdproj
sample-service/: SampleService.h  sample-service.cpp  sample-service.sln  sample-service.vcxproj  sample-service.vcxproj.filters
